update meta-server && broker's jvm args